= Changelog
:url-repo: https://gitlab.com/antora/antora-lunr-extension

This document provides a summary of all notable changes to this project grouped by release.
For a detailed view of what's changed, refer to the {url-repo}/commits[commit history] of this project.

== 1.0.0-alpha.3 (2022-01-17)

=== Fixed

* Add data directory to npm package (#31)

== 1.0.0-alpha.2 (2022-01-16)

=== Added

* Set `SITE_SEARCH_LANGUAGES` env var to a comma-separated list of languages if non-en languages are specified (#17)
* Automatically manage the search-scripts.hbs partial and remove from supplemental_ui (#17)
* Allow length of snippets in search results to be configured using `snippet_length` key (#14)

=== Changed

* Only attempt to load search stylesheet if specified in `data-stylesheet` attribute on search script (#20)
* Don't parse HTML of pages that have the `noindex` AsciiDoc attribute (#19)
* Don't parse HTML of pages not in the latest version when `index_latest_only` option is set (#23)
* Build the indexable documents in serial so the parsed HTML for only one page is held in memory at a time (#22)
* Close search on click outside search interface instead of on blur (#25)

=== Fixed

* Fix require statement for PassThrough in lazy-readable.js so it retrieves it from *stream* instead of *readable-stream* (#24)
* Publish the language support scripts as lunr-languages.js and load it into the browser, if necessary (#17)

== 1.0.0-alpha.1 (2021-12-20)

=== Added

* Initial rerelease of Antora Lunr integration as an Antora extension
* Expose `generateIndex` as exported function of main script and require path `@antora/lunr-extension/generate-index` (#9)

=== Changed

* Move lib/extension.js to lib/index.js (#6)
* Move supplemental_ui/js/vendor/search.js to supplemental_ui/js/search-ui.js
* Don't vendor lunr.js script in repository; grab it from require path (#11)
* Configure package exports to both limit what files can be required and to define a require API (#6)