@@ -36,7 +36,7 @@ function register ({ config: { languages, indexLatestOnly, snippetLength = 100, 
       vendorJsFile(uiCatalog, logger, uiOutputDir, languageRequires, 'lunr-languages.js')
     }
     const searchScriptsPartialPath = 'partials/search-scripts.hbs'
-    if (uiCatalog.findByType('partials').some(({ path }) => path === searchScriptsPartialPath)) return
+    if (uiCatalog.findByType('partial').some(({ path }) => path === searchScriptsPartialPath)) return
     const searchScriptsPartialFilepath = ospath.join(__dirname, '../data', searchScriptsPartialPath)
     uiCatalog.addFile({
       contents: Buffer.from(template(await fsp.readFile(searchScriptsPartialFilepath, 'utf8'), { snippetLength })),
