@@ -1,0 +1,3 @@
+<script src="{{{uiRootPath}}}/js/vendor/lunr.js"></script>
+<script src="{{{uiRootPath}}}/js/search-ui.js" id="search-ui-script" data-site-root-path="{{{siteRootPath}}}" data-snippet-length="150"></script>
+<script async src="{{{siteRootPath}}}/search-index.js"></script>
