@@ -4,6 +4,12 @@
 This document provides a summary of all notable changes to this project grouped by release.
 For a detailed view of what's changed, refer to the {url-repo}/commits[commit history] of this project.
 
+== Unreleased
+
+=== Fixed
+
+* Correct detect custom search-scripts.hbs partial (#32)
+
 == 1.0.0-alpha.3 (2022-01-17)
 
 === Fixed
